[package]
name = "rogue_like"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["webgl2"] }
bevy_rapier2d = "0.28"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "HtmlBodyElement",
    "Node", "Window", "CssStyleDeclaration",
] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
